@@ -6,6 +6,9 @@ Application Fixes:
 - Fixed a regression in career mode not allowing Initiation Groups to be joined or left properly. Closes #4115
 - Fixed a myriad of cases where printing a character sheet in a language that is different from the language being used for the program would sometimes result in incorrect localization and/or number formats being used.
 
+Data Changes:
+- Removed legacy nodes for Street Scum Priority values that caused incorrect nuyen amounts.
+
 Build 212
 Application Changes:
 - When entering Nuyen and Karma expenses for Working for the Man/People, it's now possible to flag the expense entry as always being present in the Expense log. This will in effect reduce the Career Karma or Career Nuyen by the selected amount. Closes #4096, closes #3613
